--- a/styles.css
+++ b/styles.css
@@ -6,12 +6,12 @@ body {
     padding: 0;
     background-color: black;
     color: #333;
-    background-image: url('BADMAN.jpg'); /* Imagen de fondo aplicada al body */
-    background-size: 75%; /* La imagen cubrirá toda la pantalla */
-    background-position: center; /* Centra la imagen de fondo */
-    background-repeat: repeat; /* No repetir la imagen de fondo */
-    background-attachment: fixed; /* Imagen de fondo fija al hacer scroll */
-    height: 100vh; /* Asegura que el body ocupe toda la altura de la ventana */
+    background-image: url('BADMAN.jpg'); 
+    background-size: 75%; 
+    background-position: center; 
+    background-repeat: repeat; 
+    background-attachment: fixed; 
+    height: 100vh; 
 }
 
 header {
@@ -34,7 +34,7 @@ nav ul {
     margin: 1rem 0 0;
     display: flex;
     justify-content: center;
-    flex-wrap: wrap; /* Permite que los elementos se envuelvan en pantallas más pequeñas */
+    flex-wrap: wrap; 
 }
 
 nav ul li {
@@ -172,7 +172,7 @@ footer p {
     .img_logo_yt,
     .img_logo_ig,
     .img_logo_tt {
-        width: 40px; /* Reduce el tamaño de los íconos */
+        width: 40px; 
         height: 40px;
     }
 }
@@ -201,7 +201,7 @@ footer p {
     .img_logo_yt,
     .img_logo_ig,
     .img_logo_tt {
-        width: 30px; /* Reduce aún más el tamaño de los íconos */
+        width: 30px; 
         height: 30px;
     }
 
